<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="xmlformat">5</string>
    <string name="questionandanswer_successfullyCompletedMission">You successfully completed this mission.</string>
    <string name="questionandanswer_notEnoughCorrectAnswers">You have not enough correct answers.</string>
    <string name="questionandanswer_rightAnswer">Right Answer :)</string>
    <string name="questionandanswer_wrongAnswer">Wrong Answer :(</string>
    <string name="questionandanswer_next">Proceed</string>
    <string name="questionandanswer_again">Try again</string>
    <string name="default_question_shuffle_mode">no</string>
    <string name="app_name">GeoQuest</string>
    <string name="default_endButtonText">Continue with next mission ...</string>
    <string name="error_qrtagreader_noresult">Sorry, tag reading did not have a result. \nMaybe
		you should try again.</string>
    <string name="geoquest_server_url">http://geoquest.qeevee.org</string>
    <string name="webupdate_local_default_repository">default</string>
    <string name="locationMockupFalseMenu">Switch to mocked location</string>
    <string name="locationMockupTrueMenu">Switch to real location</string>
    <string name="timestep_realmode">2000</string>
    <string name="quitMenu">Quit</string>
    <string name="endGameMenu">End game</string>
    <string name="menuPrefs">Prefs</string>
    <string name="preferencesTitle">Preferences</string>
    <string name="webupdate_downloadingGameFromServer">Downloading game from GeoQuest server ...</string>
    <string name="webupdate_startingGameFromExternalStorage">Starting locally stored game ...</string>
    <string name="webupdate_FetchingRepoDataFromServer">Fetching game information from server ...</string>
    <string name="webupdate_expandingGame">Loading Missions</string>
    <string name="webupdate_loadingMap">Loading Map and Hotspots</string>
    <string name="webpageButtonTextDefault">OK</string>
    <string name="startARViewMenu">Show AR View</string>
    <string name="startingARView">Starting AR View ...</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="missing_hotspot_description">No description for this hotspot availbale. Sorry.</string>
    <string name="npctalk_nextDialogButtonText">Proceed ...</string>
    <string name="qrtagreading_startscanbutton_default">Start Scanning ...</string>
    <string name="qrtagreading_taskdescription_default">Search for the QR code and scan it ...</string>
    <string name="qrtagreader_product_ifwrong">Sorry, but this is not what you are looking
		for.\nGo on to find it!</string>
    <string name="qrtagreader_product_ifright">You found it.\nCongratulations!</string>
    <string name="geoquest_repolist_relpath">/repositories/repolist.php</string>
    <string name="qrtagreader_treasure_feedback">"@result@"</string>
    <string name="error_expandingGame_DocumentException">Sorry, this game file could not be parsed.</string>
    <string name="imageCapture_UploadOK">OK, your photo has been uploaded.</string>
    <string name="imageCapture_UploadERROR">Error while uploading your picture.</string>
    <string name="gamelistHeaderStart">Games in</string>
    <string name="repolistHeaderStart">Accessible Repositories</string>
    <string name="sortoptionsHeaderStart">Sort by:</string>
    <string name="sortByName">Name</string>
    <string name="sortByDate">Date (newest first)</string>
    <string name="sortByDistance">Distance</string>
    <string name="sortByLastPlayed">Last played</string>
    <string name="centerMapMenu">Center Map</string>
    <string name="audioRecordUploadURLDefault">http://geoquest.qeevee.org/upload-audio/upload.php</string>
    <string name="imageCaptureUploadURLDefault">http://geoquest.qeevee.org/upload-images/upload.php</string>

    <!-- Generic BUTTON Labels -->
    <string name="button_text_accept">Accept</string>
    <string name="button_text_play">Play</string>
    <string name="button_text_proceed">Proceed</string>
    <string name="button_text_record">Record</string>
    <string name="button_text_repeat">Repeat</string>
    <string name="button_text_stop">Stop</string>
    <string name="button_text_use">Use</string>

    <!-- All Question MISSIONS -->
    <string name="question_reply_wrong_default">No, that was wrong.</string>
    <string name="question_reply_correct_default">Yes, that was correct.</string>

    <!-- TextQuestion MISSION -->
    <string name="textquestion_answerET_hint_default">Enter your answer here ...</string>

    <!-- AudioRecord MISSION -->
    <string name="audiorecord_task_default">Your task: record a piece of audio!</string>
    <string name="audiorecord_activityIndicator_initial">No recording made yet!</string>
    <string name="audiorecord_activityIndicator_recording">Recording ...</string>
    <string name="audiorecord_activityIndicator_ready">You made an audio record!\nRecord again? Use it? Replay?</string>
    <string name="audiorecord_activityIndicator_playing">Playing your recorded audio ...</string>
    <string name="audiorecord_file_default">audiorecord.3gp</string>

    <!-- VideoPlay MISSION -->
    <string name="videoplay_finishdialog_title">Terminate this mission?</string>
    <string name="videoplay_finishdialog_message">Leave the video?</string>
    <string name="videoplay_finishdialog_keepwatching">Keep watching</string>
    <string name="videoplay_finishdialog_watchagain">Watch again</string>
    <string name="videoplay_finishdialog_leave">Leave it!</string>
    <string name="videoplay_errordialog_message">I can not play that video.</string>

    <!-- External Mission -->
    <string name="external_mission_description_default">Starting external mission</string>
    <string name="external_mission_result_default">Back from external mission</string>

    <!-- Password protected prefs -->

    <string name="pw_dialog_title">Password</string>
    <string name="pw_dialog_descr">This action is password protected. Please submit your password.\nIf you have forgotten your password you have to reinstall the app!</string>
    <string name="pw_dialog_wrong_pw">Wrong password!</string>

    <!-- Server preferences -->

    <string name="pref_cat_server_settings">Server settings</string>
    <string name="pref_server_url_title">Server URL</string>
    <string name="pref_server_url_summary">Defines the game server URL. Don\'t change this unless you want to use your own server.</string>
    <string name="pref_server_url_dialog_title">Server URL</string>
    <string name="pref_server_url_dialog_message">Set the URL of the game server. By default, this is the Qeevee server. Only change this, if you want to use your own server.</string>

    <!-- Game startup preferences -->

    <string name="pref_cat_game_start">Game start</string>
    <string name="pref_auto_start_game_check_title">Load quest at application start</string>
    <string name="pref_auto_start_game_check_summary">Defines whether to load a specific quest at application startup</string>
    <string name="pref_auto_start_game_title">Startup quest</string>
    <string name="pref_auto_start_game_summary">Choose a quest to automatically start at application startup</string>
    <string name="pref_auto_start_game_dialog_title">Choose a quest</string>

    <!-- Miscellaneous preferences -->
    <string name="pref_cat_misc">Miscellaneous</string>
    <string name="pref_clean_sdcard_title">Clean SD card content</string>
    <string name="pref_clean_sdcard_summary">Deletes all downloaded content from the SD card.</string>
    <string name="pref_clean_sdcard_dlg_title">Clean SD card content</string>
    <string name="pref_clean_sdcard_dlg_msg">You are about to wipe all downloaded GeoQuest data from the SD card. This data has to be downloaded again if you want to play a quest. Do you really want to continue?</string>
    <string name="pref_clean_sdcard_toast_success">Local game content was successfully deleted.</string>
    <string name="pref_clean_sdcard_toast_error">Couldn\'t remove local game content.</string>

    <!-- Context menus -->
    <string name="context_auto_start_game">Load on application start</string>
    <string name="context_auto_start_game_toast">Automatic quest start enabled</string>

    <!-- Security preferences -->
    <string name="pref_cat_security">Security</string>
    <string name="pref_password_title">Password</string>
    <string name="pref_password_summary">Change application password</string>
    <string name="pref_password_dialog_title">New password</string>
    <string name="pref_password_dialog_message">Type in your new password twice.\nThis password is used to protect some important settings. Remember it carefully as you have to reinstall the app in case you\'ve forgotten it.</string>
    <string name="pref_password_dialog_error_empty_pw">Password musn\'t be empty!</string>
    <string name="pref_password_dialog_error_pws_not_equal">Make sure that both passwords are the same!</string>

    <!-- Start Activity -->
    <string name="start_text_game_list_progress_download_text">Downloading repositories...</string>
    <string name="start_text_game_list_progress_process_text">Processing repository data...</string>
    <string name="start_button_game_list_text">Select a new Quest...</string>
    <string name="start_text_welcome_text">Welcome to GeoQuest!</string>
    <string name="start_text_last_game_text">Last played Quest:</string>
    <string name="start_text_last_game_text_no_game">You haven\'t played a Quest recently...</string>
    <string name="start_text_last_game_text_game_not_found">Game not found ...</string>
    <string name="start_menu_reload">Reload game list</string>
    <string name="start_toast_download_failed">Repo list download failed - check your internet connection and try again by choosing "Reload repo data" from menu or restarting the app!</string>

     <!-- GameListActivity -->
    <string name="game_list_sort">Sort quests by...</string>
    
    <!-- Error messages -->
    <string name="error_fetching_remote_repo_list">Error fetching or processing repository list from server!</string>
    <string name="error_fetching_remote_repo_list_url">Error: GeoQuest server URL malformed!</string>
    <string name="error_fetching_remote_repo_list_io">Error: Problem with communication to GeoQuest server.</string>
    <string name="error_fetching_remote_repo_list_document">Error: Game information received from GeoQuest server invalid.</string>
    <string name="error_fetching_local_repo_list">Error fetching or processing local repository list - ignore, if this was the first app start!</string>
    <string name="error_dialog_title">Sorry, but there is a problem.</string>
    <string name="error_getting_device_location">Unfortunately the current position could not be determined.</string>

</resources>