<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:layout_width="fill_parent">
	<LinearLayout android:id="@+id/start_layout_main"
		android:orientation="vertical" android:layout_height="fill_parent"
		android:layout_width="fill_parent">

		<ImageView android:id="@+id/start_image_logo"
			android:layout_gravity="top|center"
			android:layout_width="wrap_content" android:layout_marginTop="10dip"
			android:scaleType="fitCenter" android:src="@drawable/geoquestlogo"
			android:layout_height="wrap_content" />
			
			
		<TextView android:id="@+id/start_text_welcome"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/start_text_welcome_text" android:layout_marginBottom="12dp"
			android:layout_marginTop="12dp"	android:layout_gravity="center_horizontal|center_vertical"/>
	
		<!-- <TextView android:layout_width="wrap_content"
			android:layout_centerHorizontal="true" android:layout_below="@+id/npcimage"
			android:layout_height="wrap_content" android:id="@+id/webUpdateText"
			android:text="@string/webupdate_downloadGamelist" /> -->
	
	
		<!-- <ScrollView android:id="@+id/ScrollView01"
			android:layout_centerHorizontal="true" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:layout_below="@+id/webUpdateText">
	
			<LinearLayout android:orientation="vertical"
				android:id="@+id/chooseGameButtonLayout" android:layout_height="fill_parent"
				android:layout_width="fill_parent">
			</LinearLayout>
		</ScrollView> -->
		
		<LinearLayout android:id="@+id/start_game_list_progress_layout"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:orientation="vertical" android:layout_gravity="center"
			android:gravity="bottom" android:layout_centerHorizontal="true"
			android:layout_marginTop="25dp" android:layout_marginBottom="30dp"
			android:layout_marginLeft="10dp" android:layout_marginRight="10dp">
				
			<TextView android:id="@+id/start_text_last_game"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/start_text_last_game_text" android:layout_marginBottom="12dp"
				android:layout_gravity="center_horizontal"/>
			
			<LinearLayout android:id="@+id/start_layout_last_game"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:orientation="horizontal" android:layout_marginBottom="25dp">
				
				<!-- <TextView android:id="@+id/start_text_last_game_name"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_gravity="left|center_vertical" android:layout_weight="1"
					android:ellipsize="end"
					android:maxLines="2" android:gravity="right"/> -->
								
				<edu.bonn.mobilegaming.geoquest.views.GeoquestButton android:id="@+id/start_button_last_game"
					android:layout_width="fill_parent" android:layout_height="40dp"
					android:enabled="false" android:scaleType="fitCenter"
					android:drawableRight="@drawable/navigate" android:ellipsize="end"/>
			
			</LinearLayout>
			
			<TextView android:id="@+id/start_game_list_progress_descr"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/start_text_game_list_progress_download_text" android:layout_marginBottom="10dp"
				android:layout_gravity="center_horizontal">
			</TextView>
			
			<ProgressBar style="@android:style/Widget.ProgressBar.Horizontal"
				android:id="@+id/start_progress_game_list" android:layout_width="fill_parent"
				 android:layout_height="20dp" android:saveEnabled="true"
				 android:progress="0">
			</ProgressBar>
			
			<edu.bonn.mobilegaming.geoquest.views.GeoquestButton android:id="@+id/start_button_game_list"
				android:layout_width="fill_parent" android:layout_height="40dp"
				android:visibility="gone" android:text="@string/start_button_game_list_text"/>
			
		</LinearLayout>
	</LinearLayout>



</RelativeLayout>
